objects/MobileVizArt__Mobile_Content__c.object
<CustomObject>
    <description>Defines which content libraries should be mobilized for given configuration in AIRforce.</description>
    <fields>
        <fullName>MobileVizArt__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Defines if selected content library is active and therefore replicated to offline device.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Content_Types__c</fullName>
        <inlineHelpText>Only selected content types are replicated to offline device.</inlineHelpText>
        <label>Content Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Filter_Criteria__c</fullName>
        <inlineHelpText>Please enter additional SOQL filter criteria. Please use standard SOQL where clauses with API field names.</inlineHelpText>
        <label>Filter Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__List_Content_Fields__c</fullName>
        <inlineHelpText>Define up to 3 fields to display in search result lists or recent items lists. First field is displayed in bold and with a larger font size. Other two fields are shown underneath.</inlineHelpText>
        <label>List Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Mobile_Configuration__c</fullName>
        <label>Mobile Configuration</label>
        <referenceTo>MobileVizArt__Mobile_Configuration__c</referenceTo>
        <relationshipLabel>Mobile Contents</relationshipLabel>
        <relationshipName>Mobile_Contents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Search_Fields__c</fullName>
        <inlineHelpText>Defines which fields are included in searches on offline device. All fields selected with this property are considered when users enter a search term offline. Please select field in Fields property before you can select it.</inlineHelpText>
        <label>Search Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Synchronize_To_Filesystem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Library documents will not be encrypted. Recommended for libraries with large files.</inlineHelpText>
        <label>Unencrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileVizArt__Workspace__c</fullName>
        <description>Id of the selected Workspace</description>
        <label>Workspace</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mobile Content</label>
    <nameField>
        <label>Content Library</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>